<resources>
    <string name="app_name">Kamus Online</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_rate">Rate this app</string>
    <string name="change">Change</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="input_word">Enter words here</string>
    <string name="label_username">Tayo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_name">Kamus Online v1.0</string>
    <string name="developer_name">A TEAM THUNDER DEVELOPER</string>
    <string name="about_us">About us :</string>
    <string name="share_this_app">Share this app</string>
    <string name="change_email">CHANGE EMAIL</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="remove_user">REMOVE USER</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="reset">reset</string>
    <string name="minimum_password">Password too short,enter minimum 6 character</string>
    <string name="auth_failed">Failed Authentification check your email and password or sign up</string>
    <string name="register">Register</string>
    <string name="forgot_password1">Forgot Password</string>
    <string name="login">login</string>
</resources>
